double scrolling fix

--- a/_includes/css/width900-901/calendar900.css
+++ b/_includes/css/width900-901/calendar900.css
@@ -10,13 +10,13 @@
 @media(max-width:900px) {
   .calendly-inline-widget {
     position: relative;
-    height: 100%;
+    height: 991px;
     min-width: 320px;
   }
 
   .calendar-table {
     flex: 1;
-    height: 940px;
+    height: 991px;
     padding: 0;
   }
 
@@ -34,11 +34,11 @@
 
 @media(min-width:901px) {
   .calendly-inline-widget {
-    height: 767px;
+    height: 991px;
   }
 
   .calendar-table {
-    height: 764px;
+    height: 820px;
     min-width: 45vw;
   }
 
@@ -71,12 +71,5 @@
   .calendar-element {
     min-width: 26vw;
     max-width: 45vw;
-  }
-}
-
-
-@media (min-width: 1400px) {
-  .calendly-inline-widget {
-    height: 970px;
   }
 }
